--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body{
 }
 
 .box{
-	height: 400px;
+	min-height: 400px;
 	width: 700px;
 	background-color: white;
 	border: 5px solid gray;
@@ -43,7 +43,7 @@ body{
 
 .item-list li{
 	background-color: #B8B8B8;
-	color: #fff;
+	color: #000;
 	font-size: 25px;
 	font-weight: 800;
 	margin-bottom: 10px;
@@ -53,7 +53,7 @@ body{
 	border: 2px solid black;
 }
 
-.delete{
+.minus{
 	float: right;
 	color: red;
 	margin: 0 10px 0 0;
@@ -67,4 +67,12 @@ body{
 	height: 20px;
 	cursor: pointer;
 
+}
+
+.strike{
+	text-decoration: line-through;
+}
+
+.delete{
+	display: none;
 }
