--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,13 @@ body{
 	background-color: gray;
 	text-align: center;
 }
+	.alert{
+		background-color: rgba(255,0,0,0.5);
+		padding: 15px;
+		text-align: center;
+		color: white;
+		display: none;
+	}
 
 #entry{
 	font-size: 25px;
