--- a/css/main.css
+++ b/css/main.css
@@ -117,14 +117,11 @@ body{
 
 #clear-checked{
 	margin-top: 40px;
-	/* margin-left: 35%;
-	font-size: 20px; */
 	width: 100%;
 	color: #FFF;
 	font-size: 30px;
 	background-color: #ff0000;
 }
-
 
 .strike{
 	text-decoration: line-through;
@@ -137,12 +134,41 @@ body{
 		width: 100%;
 	}
 
+	.title{
+		text-align: center;
+		font-size: 40px;
+	}
+
+	.instructions{
+		display: none;
+	}
+
 	#clear-checked{
 		padding: 20px 0;
 	}
 
+	#entry{
+		font-size: 30px;
+		padding: 10px 0;
+	}
+
 	.item-list li{
-		font-size: 40px;
+		font-size: 30px;
+	}
+
+	.icon-remove,
+	.icon-plus{
+		display: none;
+	}
+
+	.checkbox{
+		width: 40px;
+		height: 40px;
+		margin: 0 3px 15px 0;
+	}
+
+	.item-list li{
+		padding: 20px 0;
 	}
 
 }
