--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+*{
+	box-sizing: border-box;
+}
+
 body{
 	background-color: #07173D;
 	font-family: 'Raleway';
@@ -58,6 +62,13 @@ body{
 	float: right;
 	padding: 2px 10px 0 0;
 	cursor: pointer;
+	display: none;
+}
+
+.icon-remove{
+	float: right;
+	padding: 2px 10px 0 0;
+	cursor: pointer;
 }
 
 .instructions{
@@ -78,18 +89,26 @@ body{
 	display: none;
 }
 
+#entryForm{
+	height: 40px;
+}
+
 #entry{
-	font-size: 20px;
+	font-size: 22px;
 	margin: 0 0 1px 0;
-	border: 1px solid rgba(0,0,0,0);
-	width: 99.7%;
+	width: 75%;
+	border: none;
+	display: inline-block;
+	height: 100%;
 }
 
 #add-item{
-	padding: 5.5px;
-	margin: 0px;
-	float: right;
+	width: 25%;
 	font-family: 'Raleway';
+	border: none;
+	display: inline-block;
+	height: 100%;
+	float: right;
 }
 
 .item-list{
@@ -129,7 +148,7 @@ body{
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 1024px){
 	.box{
 		width: 100%;
 	}
@@ -152,19 +171,30 @@ body{
 		padding: 15px 0;
 	}
 
+
 	.item-list li{
 		font-size: 30px;
 	}
 
+	.icon-plus,
 	.icon-remove,
-	.icon-plus{
+	.instructions{
 		display: none;
+	}
+
+	.minus{
+		margin-top: -3px;
+	}
+
+	.icon-trash{
+		font-size: 45px;
+		padding-bottom: 20px;
 	}
 
 	.checkbox{
 		width: 40px;
 		height: 40px;
-		margin: 0 3px 15px 0;
+		margin: 0 10px 15px 0;
 	}
 
 	.item-list li{
@@ -172,3 +202,23 @@ body{
 	}
 
 }
+
+@media only screen and (max-width: 691px){
+	
+	.minus{
+		display: none;
+	}
+
+	#entryForm{
+		height: 60px;
+	}
+
+	.item-list li{
+		font-size: 20px;
+	}
+
+	.checkbox{
+		margin-top: -7px;
+	}
+
+	}
