--- a/css/main.css
+++ b/css/main.css
@@ -62,14 +62,14 @@ body{
 	float: right;
 	padding: 2px 10px 0 0;
 	cursor: pointer;
-	display: none;
+/* 	display: none; */
 }
 
-.icon-remove{
+/* .icon-remove{
 	float: right;
 	padding: 2px 10px 0 0;
 	cursor: pointer;
-}
+} */
 
 .instructions{
 	background-color: #629aa9;
@@ -91,11 +91,11 @@ body{
 	display: none;
 }
 
-#entryForm{
+.entryForm{
 	height: 40px;
 }
 
-#entry{
+.entry{
 	font-size: 22px;
 	margin: 0 0 1px 0;
 	width: 75%;
@@ -104,7 +104,7 @@ body{
 	height: 100%;
 }
 
-#add-item{
+.add-item{
 	width: 25%;
 	border: none;
 	display: inline-block;
@@ -135,7 +135,7 @@ body{
 	cursor: pointer;
 }
 
-#clear-checked{
+.clear-checked{
 	margin-top: 40px;
 	width: 100%;
 	color: #FFF;
